[metadata]
name = ledger
version = 0.0.1
author = Ben Hawkyard
author_email = bhawkyard1@gmail.com
description = Small set of scripts to ingest data from csv bank statements and collate/display results.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhawkyard1/ledger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/ledger
python_requires = >=3.6

[options.packages.find]
where = src